# cad-experiments

./: .gitignore  README.md  pyproject.toml  source.py
cad-experiments/: dxf_parser.py  index.py  main.py
files/: first.dxf~
src/: dxf_parser.py  index.py
