[tool.poetry]
name = "cad-experiments"
version = "0.1.0"
description = ""
authors = ["Chinmay Bag <chinmay@praemineo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.3"
tqdm = "^4.66.2"
ezdxf = {extras = ["draw"], version = "^1.2.0"}
jupyterlab = "^4.1.8"
streamlit-drawable-canvas = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
